--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 
 
+<script src='trueorfalse.js'></script>
 <script src='number.js'></script>
 <script src='string.js'></script>
 <script src='variaveis.js'></script>
