--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <body>
 
 
+<script src='lista.js'></script><!--
 <script src='trueorfalse.js'></script>
 <script src='number.js'></script>
 <script src='string.js'></script>
 <script src='variaveis.js'></script>
+ -->
 </body>
 </html>
