--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <body>
 
 
-<script src='lista.js'></script><!--
+<script src='json.js'></script>
+<!--
+	
+<script src='objetos.js'></script>
+<script src='maps.js'></script>
+<script src='lista.js'></script>
 <script src='trueorfalse.js'></script>
 <script src='number.js'></script>
 <script src='string.js'></script>
