--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
 
 
-<script src='json.js'></script>
+<script src='functions.js'></script>
 <!--
 	
+<script src='condicionais.js'></script>
+<script src='loops.js'></script>
+<script src='json.js'></script>
 <script src='objetos.js'></script>
 <script src='maps.js'></script>
 <script src='lista.js'></script>
